# FRE-2023

./: .gitignore  README.md
control/: package.xml  setup.py
control/control/: pid.py  pid2.py
control_int/: package.xml  setup.cfg  setup.py
control_int/control_int/: aut_nav.py  aut_nav_param.py  pid.py  pid2.py  pid3.py
grasslammer2_bringup/: package.xml  setup.cfg  setup.py
grasslammer2_bringup/grasslammer2_bringup/: raw_ls_rotation.py  raw_pc_rotation.py
grasslammer2_bringup/launch/: full_navigation_and_mapping.launch.py  mapping.launch.py  navigation.launch.py  ransac_filters.launch.py  sensors.launch.py  task1.launch.py  task1Simulation.launch.py  task2.launch.py  task3.launch.py  task4.launch.py  turning.launch.py
grasslammer2_description/: CMakeLists.txt  package.xml
grasslammer2_description/config/: controller.yaml  ekf.yaml  in_row_params.json  in_row_params_real.json  in_row_params_sim.json  mapper_params_online_sync.yaml  nav2_bad.yaml  nav2_params.yaml  output.json  pathTask1.txt  pathTask2.txt  pathTask4.txt
grasslammer2_description/launch/: bot_state_publisher.launch.py  bringup_launch.py  controller.launch.py  ekf_launcher.launch.py  gaz_world.launch.py  image_view.launch.py  joystick.launch.py  localization_launch.py  navigation_launch.py  online_sync_launch.py  sim_and_mapping.launch.py  simulation.launch.py  slam_launch.py
grasslammer2_description/meshes/: rampa.dae  rocker_L_leg.stl  rocker_L_leg_short.stl  rocker_L_leg_short_simplified.stl  rocker_R_leg.stl  rocker_R_leg_short.stl  rocker_body.dae  rocker_body.stl  rocker_body_simplified.dae  rocker_wheel.stl  rocker_wheel_simplified.stl
grasslammer2_description/models/: ramp.dae
grasslammer2_description/models/big_plant/mesh/: big_plant.stl
grasslammer2_description/models/custom_terrain/: model.config  model.sdf
grasslammer2_description/models/custom_terrain/materials/scripts/: terrain.material
grasslammer2_description/models/custom_terrain/meshes/: custom_terrain.dae  terrain.stl
grasslammer2_description/models/maize_01/: model.sdf
grasslammer2_description/models/rampa/: model.config  model.sdf
grasslammer2_description/models/rampa/materials/scripts/: rampa.material
grasslammer2_description/models/rampa/mesh/: rampa.dae
grasslammer2_description/models/ramps_world/: model.config  model.sdf
grasslammer2_description/src/: rotations.cpp  tf_builder.cpp
grasslammer2_description/urdf/: lidar.xacro  model.gazebo  model.urdf  model_long.urdf  model_short.urdf  oakd-pro-W.xacro  oakd_pro_W.xacro  ros2_control.xacro  wheels.xacro
grasslammer2_description/worlds/: 1.world  2.world  bump_test.world  clean_world.world  cust_fre_nav_1.world  cust_fre_nav_2.world  cust_fre_nav_3.world  custom_field.world  empty_world.world  farm.world  field1.world  field2.world  field3.world  field4.world  field_easy.world  fre23_10_no_gaps.world  fre23_10_no_gaps_light.world  fre23_10_w_gaps.world  fre23_10_w_gaps_light.world  fre23_5_w_gaps.world  fre23_5_w_gaps_light.world  fre_curved_world_dynamic.world  generated.world  lunar_agriculture.world  roboPark.world  test_bot.world
grasslammer2_gazebo_plugins/: CMakeLists.txt  package.xml
grasslammer2_gazebo_plugins/src/: differential_plugin.cpp
grasslammer2_nav_py/: package.xml  setup.cfg  setup.py
grasslammer2_nav_py/grasslammer2_nav_py/: average_eol.py  convert_cmd_vel_for_sim.py  costum_queue.py  definitive_turner.py  end_of_line_detection.py  end_of_line_pose.py  in_row_navigation.py  in_row_navigation_IV_quad.py  in_row_navigation_new.py  in_row_navigation_task_4.py  laser_reader.py  line.py  map_edit.py  moving_average.py  moving_average_queue.py  nav2_enabler.py  navigation.py  navigation_ransac.py  oak_test.py  obstacle_detector.py  obstacle_detector_plan_timer.py  obstacle_detectorintegrated.py  plotter.py  pose_publisher.py  prediction.py  pub_navigation_goals.py  ransac_nearby_lines.py  rgbd_twister.py  spray_switch.py  test.ipynb  test.py  tf_end_of_line.py  turner_from_line.py  turner_intermediate.py  turner_simple.py  turning.py
grasslammer2_nav_py/grasslammer2_nav_py/data_analysis/: data_analysis_trials_100_inliers_inf_score_inf.csv  number_samplesNone.csv
grasslammer2_nav_py/grasslammer2_nav_py/data_analysis/250323/: data_analysis_trials_100_inliers_inf_score_inf_first_computation.csv  data_analysis_trials_100_inliers_inf_score_inf_min_sample_2.csv  data_analysis_trials_100_inliers_inf_score_inf_no_plot.csv  data_analysis_trials_10_inliers_inf_score_inf.csv  number_samples2.csv  number_samples_2_fixed_min.csv  (+1 more)
grasslammer2_nav_py/grasslammer2_nav_py/in_row_navigation_config/: cornaredo.json
grasslammer2_nav_py/launch/: in_row_navigation.launch.py  nav.launch.py
grasslammer2_nav_py/rviz/: laser.rviz
grasslammer2_navigation/: package.xml  setup.cfg  setup.py
ground_removal/: CMakeLists.txt  package.xml
ground_removal/src/: ground_removal.cpp
joystick_ros2/: CMakeLists.txt  README.md  package.xml
joystick_ros2/config/: joystick.yaml
joystick_ros2/launch/: joystick.launch.py
map/: launch_on_real_map.sh  launch_on_white_map.sh  map.pgm  map.yaml  nav2_params.yaml  nav2_personal.rviz  white.pgm  white.yaml  white_with_trails.pgm  white_with_trails.yaml
map_filter/: CMakeLists.txt  package.xml
map_filter/src/: cloud_to_scan.cpp  cloud_to_scan_ransac.cpp  cropbox_cloud.cpp  map_filter.cpp  map_filter_approx.cpp  map_filter_approx_ransac.cpp  map_filter_sectors.cpp
pid_control/pid_control/: pid2.py
tools/: original_xml.txt  pyserial_test.ipynb  zeroed_world.xml  zeroing_xml.ipynb
tools/DirectableLED/: DirectableLED.ino
utils_py/: package.xml  setup.cfg  setup.py
utils_py/launch/: baseline.launch.py
utils_py/utils_py/: optimator.py
velodyne_simulator/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro
yolotor/: package.xml  setup.cfg  setup.py
yolotor/yolotor/: yolo_led_link.py  yolotor.py  yolotor_classifier.py  yolotor_config.json  yolotor_node.py  yolotor_queue.py  yolotor_tester.py  yolotor_utils.py
yolotor/yolotor/small/: best.json
(+4 files in other folders)
